test/conformance/chainsaw/generating-policies/existing/basic-generate-with-name-matching/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: match-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: non-match-namespace
