test/conformance/chainsaw/generating-policies/existing/basic-generate-with-name-matching/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: GeneratingPolicy
metadata:
  name: basic-generate-with-name-matching
spec:
  evaluation:
    generateExisting:
      enabled: true
  matchConstraints:
    resourceRules:
    - apiGroups:     [""]
      apiVersions:   ["v1"]
      operations:    ["CREATE", "UPDATE"]
      resources:     ["namespaces"]
      resourceNames: ["match-namespace"]
  variables:
    - name: nsName
      expression: "object.metadata.name"
    - name: configmap
      expression: >-
        [
          {
            "kind": dyn("ConfigMap"),
            "apiVersion": dyn("v1"),
            "metadata": dyn({
              "name": "basic-generate-with-name-matching",
              "namespace": string(variables.nsName),
            }),
            "data": dyn({
              "KAFKA_ADDRESS": "192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092",
              "ZK_ADDRESS": "192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181"
            })
          }
        ]
  generate:
    - expression: generator.apply(variables.nsName, variables.configmap)
