test/conformance/chainsaw/generating-policies/existing/basic-generate-with-name-matching/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: basic-generate-with-name-matching
spec:
  steps:
  - name: create permissions
    try:
    - apply:
        file: permissions.yaml
  - name: create policy
    use:
      template: ../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-generating-policy-ready
    use:
      template: ../../../_step-templates/generating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: basic-generate-with-name-matching
  - name: create the trigger
    try:
    - apply:
        file: namespace.yaml
  - name: check that the configmap is generated
    try:
    - assert:
        file: configmap-assert.yaml
        timeout: 60s
